--- a/src/index.css
+++ b/src/index.css
@@ -77,7 +77,7 @@ html {
 .jumbotron {
    width: 100%;
    height: 100vh;
-   background-image: url(./img//myke-simon-atsUqIm3wxo-unsplash.jpg);
+   background-image: url(https://images.unsplash.com/photo-1536440136628-849c177e76a1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=925&q=80);
    background-size: cover;
    position: relative;
 }
@@ -126,7 +126,7 @@ html {
 .contact {
    width: 100%;
    height: 100vh;
-   background-image: url(./img/kilyan-sockalingum-nW1n9eNHOsc-unsplash.jpg);
+   background-image: url(https://images.unsplash.com/photo-1513106580091-1d82408b8cd6?ixlib=rb-1.2.1&auto=format&fit=crop&w=1055&q=80);
    background-size: cover;
    position: relative;
    display: flex;
@@ -258,7 +258,7 @@ html {
 .wrapper {
    width: 100%;
    height: 130vh;
-   background-image: url(./img/erik-witsoe-GF8VvBgcJ4o-unsplash.jpg);
+   background-image: url(https://images.unsplash.com/photo-1524985069026-dd778a71c7b4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1051&q=80);
    object-fit: cover;
    background-position: center;
 }
