--- a/src/index.css
+++ b/src/index.css
@@ -258,9 +258,10 @@ html {
 .wrapper {
    width: 100%;
    height: 130vh;
-   background-image: url(https://images.unsplash.com/photo-1524985069026-dd778a71c7b4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1051&q=80);
+   background-image: url(./img/erik-witsoe-GF8VvBgcJ4o-unsplash.jpg);
    object-fit: cover;
    background-position: center;
+   background-repeat: no-repeat;
 }
 .wrapper::after {
    content: "";
