--- a/src/index.css
+++ b/src/index.css
@@ -123,17 +123,16 @@ html {
 /* HOME */
 
 /* CONTACT */
-.contact {
+.about {
    width: 100%;
    height: 100vh;
    background-image: url(https://images.unsplash.com/photo-1513106580091-1d82408b8cd6?ixlib=rb-1.2.1&auto=format&fit=crop&w=1055&q=80);
    background-size: cover;
    position: relative;
-   display: flex;
-   align-items: center;
-   justify-content: center;
+   margin: auto;
+   padding-top: 200px;
 }
-.contact::after {
+.about::after {
    content: "";
    width: 100%;
    height: 100vh;
@@ -145,20 +144,36 @@ html {
    bottom: 0;
    opacity: 0.5;
 }
-
-.contact .form {
-   position: relative;
-   z-index: 10;
-}
-.contact .form label {
+.card {
+   max-width: 600px;
+   z-index: 99;
+   background-color: #424242;
    color: white;
+   margin: auto;
+   padding: 20px;
 }
-.contact .container {
-   width: 800px;
+.card h2 {
+   text-align: center;
+   margin-bottom: 10px;
 }
-.contact .container .form button {
-   margin-right: auto;
+.card hr {
+   background-color: whitesmoke;
+}
+.card p {
+   margin-bottom: 20px;
+   text-align: left;
+}
+.card .social-icons {
    width: 100%;
+   margin-top: 50px;
+}
+.card .social-icons a {
+   color: white;
+   margin: 0 8px;
+   transition: color 200ms ease-in;
+}
+.card .social-icons a:hover {
+   color: tomato;
 }
 /* search details */
 .searchDetails {
